---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2025-02-26
  Features:
    - Added new items
    - Added locale for some late game tech
    - Added polish locale thanks to S3BA
  Changes:
    - Car is now unlocked earlier
    - Gas power station is now called incinerator and can burn solids and liquids for capturing the resulting gasses / oxides
    - Fluid burner now vents gases and fluids (before it was called burning)
    - Tech tree updates for reaching production science pack
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2025-02-23
  Changes:
    - Tech tree updates for reaching logistic science pack 2
    - Moved fluid recipes to fluid recipes group
    - Updated some crafting categories
    - Increased crafting speed of some buildings
  Bugfixes:
    - Fixed some missing locale
    - Fixed storage volume of tanks
    - Radar is now unlocked after automation core
    - Burner inserter can now be unlocked in tech tree
    - Updated sodium hydroxide recipe
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2025-02-20
  Features:
    - Compatible with Factorio Space age
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 2024-10-20
  Features:
    - Added new infinite technologies
  Bugfixes:
    - Fixed scaling of technology costs
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2024-10-18
  Bugfixes:
    - Updated some icons with isometric perspective
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2024-10-16
  Features:
    - New recipes enriching crushed ores
  Bugfixes:
    - Changed order and subgroups of some items