@@ -83,9 +83,10 @@ data.raw.technology["gun-turret"].research_trigger =
 
 table.insert(data.raw.technology["bulk-inserter"].prerequisites, "sp-power-regulation")
 table.insert(data.raw.technology["bulk-inserter"].prerequisites, "sp-advanced-gearbox")
+table.insert(data.raw.technology["bulk-inserter"].prerequisites, "sp-logistic-science-pack-2")
 data.raw.technology["bulk-inserter"].unit.ingredients = {
   {"sp-automation-science-pack-2", 1},
-  {"logistic-science-pack", 1},
+  {"sp-logistic-science-pack-2", 1},
   {"sp-chemical-science-pack-2", 1},
   {"sp-electronic-science-pack-1", 1},
   {"sp-material-science-pack-2", 1},
@@ -383,7 +384,7 @@ data.raw.technology["solar-energy"].prerequisites = {
 data.raw.technology["solar-energy"].unit.ingredients = {
   {"sp-automation-science-pack-2", 1},
   {"sp-logistic-science-pack-2", 1},
-  {"sp-electronic-science-pack-1", 1},
+  {"sp-electronic-science-pack-2", 1},
   {"sp-material-science-pack-2", 1},
   {"sp-chemical-science-pack-2", 1},
   {"sp-geological-science-pack-2", 1},
@@ -973,7 +974,7 @@ data.raw.technology["solar-panel-equipment"].prerequisites = {
 data.raw.technology["solar-panel-equipment"].unit.ingredients = {
   {"sp-automation-science-pack-2", 1},
   {"sp-logistic-science-pack-2", 1},
-  {"sp-electronic-science-pack-1", 1},
+  {"sp-electronic-science-pack-2", 1},
   {"sp-material-science-pack-2", 1},
   {"sp-chemical-science-pack-2", 1},
   {"sp-geological-science-pack-2", 1},
@@ -1443,14 +1444,20 @@ data.raw.technology["braking-force-7"].unit.ingredients = {
 }
 
 data.raw.technology["inserter-capacity-bonus-1"].prerequisites = {
-  "sp-electronic-science-pack-2"
+  "sp-electronic-science-pack-2",
+  "sp-metallurgic-science-pack-2",
+  "sp-electromagnetic-science-pack-2",
+  "bulk-inserter"
 }
 data.raw.technology["inserter-capacity-bonus-1"].unit.ingredients = {
   {"sp-automation-science-pack-2", 1},
   {"sp-logistic-science-pack-2", 1},
-  {"sp-material-science-pack-1", 1},
+  {"sp-chemical-science-pack-2", 1},
   {"sp-electronic-science-pack-2", 1},
-  {"production-science-pack", 1}
+  {"sp-material-science-pack-2", 1},
+  {"sp-geological-science-pack-2", 1},
+  {"sp-metallurgic-science-pack-2", 1},
+  {"sp-electromagnetic-science-pack-2", 1}
 }
 data.raw.technology["inserter-capacity-bonus-1"].effects = {
   {
@@ -1462,9 +1469,12 @@ data.raw.technology["inserter-capacity-bonus-1"].effects = {
 data.raw.technology["inserter-capacity-bonus-2"].unit.ingredients = {
   {"sp-automation-science-pack-2", 1},
   {"sp-logistic-science-pack-2", 1},
-  {"sp-material-science-pack-1", 1},
+  {"sp-chemical-science-pack-2", 1},
   {"sp-electronic-science-pack-2", 1},
-  {"production-science-pack", 1}
+  {"sp-material-science-pack-2", 1},
+  {"sp-geological-science-pack-2", 1},
+  {"sp-metallurgic-science-pack-2", 1},
+  {"sp-electromagnetic-science-pack-2", 1}
 }
 data.raw.technology["inserter-capacity-bonus-2"].effects = {
   {
@@ -1481,11 +1491,11 @@ data.raw.technology["inserter-capacity-bonus-3"].unit.ingredients = {
   {"sp-automation-science-pack-2", 1},
   {"sp-logistic-science-pack-2", 1},
   {"sp-chemical-science-pack-2", 1},
-  {"sp-material-science-pack-2", 1},
-  {"production-science-pack", 1},
-  {"sp-geological-science-pack-2", 1},
   {"sp-electronic-science-pack-2", 1},
-  {"utility-science-pack", 1}
+  {"sp-material-science-pack-2", 1},
+  {"sp-geological-science-pack-2", 1},
+  {"sp-metallurgic-science-pack-2", 1},
+  {"sp-electromagnetic-science-pack-2", 1}
 }
 data.raw.technology["inserter-capacity-bonus-3"].effects = {
   {
