@@ -1500,7 +1500,7 @@ data:extend({
         {"sp-logistic-science-pack-2", 1},
         {"sp-electronic-science-pack-1", 1},
         {"sp-material-science-pack-2", 1},
-        {"chemical-science-pack", 1},
+        {"sp-chemical-science-pack-2", 1},
         {"sp-geological-science-pack-2", 1},
         {"production-science-pack", 1},
         {"sp-metallurgic-science-pack-2", 1},
@@ -1865,7 +1865,7 @@ data:extend({
       ingredients = {
         {"sp-automation-science-pack-2", 1},
         {"sp-logistic-science-pack-2", 1},
-        {"sp-electronic-science-pack-1", 1},
+        {"sp-electronic-science-pack-2", 1},
         {"sp-material-science-pack-2", 1},
         {"sp-chemical-science-pack-2", 1},
         {"sp-geological-science-pack-2", 1},
@@ -2118,7 +2118,7 @@ data:extend({
       ingredients = {
         {"sp-automation-science-pack-2", 1},
         {"sp-logistic-science-pack-2", 1},
-        {"sp-electronic-science-pack-1", 1},
+        {"sp-electronic-science-pack-2", 1},
         {"sp-material-science-pack-2", 1},
         {"sp-chemical-science-pack-2", 1},
         {"sp-geological-science-pack-2", 1},
